# side

./: docker-compose.yml
backend/users-service/: .env.example  pyproject.toml
backend/users-service/src/app/: main.py
backend/users-service/src/app/api/: main.py
backend/users-service/src/app/api/handlers/: exception_handlers.py
backend/users-service/src/app/api/middleware/: correlation_id.py
backend/users-service/src/app/api/routes/: account.py  auth.py  user.py
backend/users-service/src/app/core/: scheduler.py
backend/users-service/src/app/core/exceptions/: auth.py  base.py  cache.py  identity_provider.py  integrations.py  storage.py  user.py  validation.py
backend/users-service/src/app/core/files/: policies.py  validators.py
backend/users-service/src/app/core/logging/: context.py  formatter.py  logger.py  utils.py
backend/users-service/src/app/integrations/: _utils.py  cache.py  keycloak_admin.py  keycloak_auth.py  keycloak_client.py  minio.py  storage.py
backend/users-service/src/app/migrations/: env.py
backend/users-service/src/app/migrations/versions/: 0304ccc99cab_refactor_users_ms_db.py  3d960906e058_first_migration_from_the_users_ms.py  (+1 more)
backend/users-service/src/app/models/: account.py  interests.py  kc_tasks.py  location.py  user.py
backend/users-service/src/app/repositories/: account_repository.py  user.py  user_repository.py
backend/users-service/src/app/schemas/: auth.py  base.py  user.py
backend/users-service/src/app/services/: auth_service.py  user_service.py
backend/users-service/src/app/workers/: keycloak_tasks.py
(+21 files in other folders)
